; ModuleID = '/home/carl/AnghaBench/linux/drivers/video/fbdev/extr_da8xx-fb.c_lcd_cfg_ac_bias.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/video/fbdev/extr_da8xx-fb.c_lcd_cfg_ac_bias.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LCD_RASTER_TIMING_2_REG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32)* @lcd_cfg_ac_bias to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @lcd_cfg_ac_bias(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* @LCD_RASTER_TIMING_2_REG, align 4
  %7 = call i32 @lcdc_read(i32 %6)
  %8 = and i32 %7, -1048576
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* %3, align 4
  %10 = call i32 @LCD_AC_BIAS_FREQUENCY(i32 %9)
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @LCD_AC_BIAS_TRANSITIONS_PER_INT(i32 %11)
  %13 = or i32 %10, %12
  %14 = load i32, i32* %5, align 4
  %15 = or i32 %14, %13
  store i32 %15, i32* %5, align 4
  %16 = load i32, i32* %5, align 4
  %17 = load i32, i32* @LCD_RASTER_TIMING_2_REG, align 4
  %18 = call i32 @lcdc_write(i32 %16, i32 %17)
  ret void
}

declare dso_local i32 @lcdc_read(i32) #1

declare dso_local i32 @LCD_AC_BIAS_FREQUENCY(i32) #1

declare dso_local i32 @LCD_AC_BIAS_TRANSITIONS_PER_INT(i32) #1

declare dso_local i32 @lcdc_write(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
